# tuffy-cli

./: .gitignore  ARCHITECTURE.md  ELASTIMEM_INTEGRATION.md  README.md  TUFFY_DESKTOP_PLAN.md  UPGRADE_PLAN.md  main.py  pyproject.toml
.tuffy/skills/: README.md
.tuffy/skills/scratchpad/: SKILL.md  tools.py
agent_workspace/: README.md
docs/: README.md  cli-reference.md  configure-mcp.md  configure-models.md  configure-skills.md  configure-tools.md
scripts/: setup_jetson.sh
src/: README.md  agent.py  env.py  identity.py  memory.py  vision.py  workspace.py
src/cli/: README.md  commands.py  session.py  turn.py
src/engine/: README.md  errors.py  events.py  stream_parser.py  tool_dispatch.py  turn_engine.py
src/llm/: README.md  __init__.py  base.py  llama_cpp_provider.py  openai_compatible_provider.py
src/models/: __init__.py  registry.py
src/models/configs/: __init__.py  api.py  local.py
src/models/weights/: README.md
src/prompts/: README.md  __init__.py  personas.yaml  templates.py
src/skills/: loader.py
src/tools/: README.md  __init__.py  coding.py  editing.py  mcp_client.py  mcp_install.py  registry.py  research.py  system.py
src/voice/: __init__.py  assets.py  audio.py  stt.py  transcribe_helper.py  tts.py  voice_cli.py
tests/: test_cli_turn_integration.py  test_coding_tools.py  test_editing_tools.py  test_llama_cpp_provider.py  test_mcp_client_config.py  test_mcp_install.py  test_memory_purge.py  test_public_api.py  test_registry_unregister.py  test_stream_parser.py  test_tool_dispatch.py  test_turn_engine.py  test_turn_health.py
tuffy/: __init__.py
tuffy_core/: README.md  __init__.py
