[project]
name = "tuffy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "llama-cpp-python>=0.3.32",
    "mcp>=1.28.1",
    "opencv-python>=4.10.0",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
