[project]
name = "tuffy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.14.4",
    "elastimem",
    "fastembed>=0.8.0",
    "llama-cpp-python>=0.3.32",
    "mcp>=1.28.1",
    "opencv-python>=4.10.0",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[tool.uv.sources]
elastimem = { git = "https://github.com/CodebyKumar/elastimem.git" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

# tuffy/__init__.py (the public surface external consumers like tuffy-ui
# import) reaches into src/ at call time, so both must ship as real
# packages — this project was previously a uv "virtual" root (no
# [build-system], nothing installable), which is why an external repo's
# `uv.sources` path dependency couldn't resolve `from tuffy import ...`
# until now.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuffy", "src"]
